# Seguidor-de-Ubicacion-Usando-GPS-y-Memoria-Permanente

./: CMakeLists.txt  README.md  eeprom.c  eeprom.h  events.c  events.h  general.h  gpio.c  gpio.h  keyboard.c  keyboard.h  lcd.c  lcd.h  main.c  plantilla.c  plantilla.h  timer.c  timer.h  uart.c  uart.h
